Port time archive to Forge 1.20.1